# agent-cowork

./: .env.example  .gitignore  2026-05-20-kimi-cowork-implementation-plan.md  CHANGELOG.md  README.md  build2.ps1  capwin.ps1  kimi_workspace_cowork_mvp_plan.md  package.json  runhost3017.ps1  test-setup.mjs  tsconfig.host-checkjs.json
apps/windows-client/: CMakeLists.txt
apps/windows-client/resources/: app-api-client.js  app-composer-popover.js  app-run-events.js  app-utils.js  app.css  app.js  component-manifest.json  index.html
apps/windows-client/resources/python-embedded/: README.md
apps/windows-client/src/: app_window.c  app_window.h  json.c  json.h  main.c  native_bridge.c  native_bridge.h  tray.c  tray.h  webview_bridge.cpp  webview_bridge.h
apps/windows-client/src-tauri/: Cargo.toml  tauri.conf.json
apps/windows-client/src-tauri/binaries/: README.md  sea-out.txt
apps/windows-client/src-tauri/capabilities/: default.json
apps/windows-client/src-tauri/icons/: icon.icns
apps/windows-client/src-tauri/src/: commands.rs  config.rs  error.rs  lib.rs  main.rs  security.rs  sidecar.rs  updater.rs
apps/windows-client/src-tauri/windows/: nsis-hooks.nsh
apps/windows-client/ui/: README.md  build-host-sea.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.build.mjs  vite.config.build.mjs.timestamp-1779479972600-a6672520be5f2.mjs  vite.config.d.ts  vite.config.js  vite.config.js.timestamp-1779449484082-d54d2116d466d.mjs  vite.config.ts  vite.config.ts.timestamp-1779479899355-518f5f599124.mjs
apps/windows-client/ui/src/: App.tsx  main.tsx  styles.css
apps/windows-client/ui/src/components/: ApiSettings.test.tsx  ApiSettings.tsx  AppComposerDock.test.tsx  AppComposerDock.tsx  AppHeader.test.tsx  AppHeader.tsx  AppOverlays.test.tsx  AppOverlays.tsx  AppSidePanel.test.tsx  AppSidePanel.tsx  ApprovalActions.test.tsx  ApprovalActions.tsx  ArtifactCard.test.tsx  ArtifactCard.tsx  ArtifactsPanel.tsx  ClarificationCard.test.tsx  ClarificationCard.tsx  CommandPalette.test.tsx  CommandPalette.tsx  Composer.test.tsx  Composer.tsx  ComposerActions.test.tsx  ComposerActions.tsx  ComposerAttachments.test.tsx  ComposerAttachments.tsx  ComposerFooter.tsx  ComposerModelControls.tsx  ComposerSuggestions.test.tsx  ComposerSuggestions.tsx  ComposerTriggers.tsx  ConnectorsPanel.test.tsx  ConnectorsPanel.tsx  ConversationRail.test.tsx  ConversationRail.tsx  FilePreview.test.tsx  FilePreview.tsx  InlineViz.test.tsx  InlineViz.tsx  LiveArtifactView.state.test.tsx  LiveArtifactView.test.ts  (+38 more)
apps/windows-client/ui/src/hooks/: useAppRuntimeState.test.ts  useAppRuntimeState.ts  useComposerRefine.ts  useComposerSuggestions.ts  useComposerVoice.test.ts  useComposerVoice.ts  useConversations.ts  usePromptRefine.ts  useRecipeCapture.ts  useShortcuts.test.ts  useShortcuts.ts  useStickToBottom.test.ts  useStickToBottom.ts  useVirtualWindow.test.ts  useVirtualWindow.ts
apps/windows-client/ui/src/lib/: api.test.ts  api.ts  app-constants.ts  app-logic.test.ts  app-logic.ts  app-types.ts  chat-stream-callbacks.test.ts  chat-stream-callbacks.ts  composer-logic.test.ts  composer-logic.ts  composer-trigger.test.ts  composer-trigger.ts  conversation-branches.test.ts  conversation-branches.ts  conversations.test.ts  conversations.ts  friendly-error.test.ts  friendly-error.ts  icons.ts  md-sanitize.test.ts  md.test.ts  md.ts  observability-args.ts  onboarding.test.ts  types.ts  (+12 more)
(+633 files in other folders)
