[package]
name = "kimi-cowork-desktop"
version = "0.1.0"
description = "Tauri shell for Kimi Cowork"
edition = "2021"
rust-version = "1.77"

[lib]
name = "kimi_cowork_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
